--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,8 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <a href="#open">3213</a>
+    <div id="widget-1bit"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
