start types (with error)

--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <a href="#open">3213</a>
+    <a href="#open?review=__REVIEW__">3213</a>
     <div id="widget-1bit"></div>
     <!--
       This HTML file is a template.
